# myfinmodel

./: .gitignore  LICENSE  README.md  app.py  dummy_app.py  pyproject.toml  requirements.txt  run_and_kill.py  test_mp.spec  test_streamlit_bootstrap.py
docs/: MC_Retirement_Planner_Functional_Spec.md  Monte Carlo Retirement Planner — Functional Specification.docx  MonteCarloRetirementPlanner-FuncSpec.md  UsingMyFinModelSimulator.md  deployment-setup-spec.md  dev-design-spec.md  issue-13-persistent-scenarios-spec.md  myfinmodel-examples.md  myfinmodel-user-guide.md  phase-4-implementation-plan.md  results-tables-charts-mockup.html  ui-mockup.html  workbook-sharing-instructions.md
packaging/: README-Run.txt  build_portable.ps1  launch_myfinmodel.bat  myfinmodel.spec
packaging/launcher/: __init__.py  __main__.py  main.py
simulation/: __init__.py  engine.py  guardrails.py  helpers.py  models.py  monte_carlo.py
tests/: __init__.py  test_charts.py  test_engine.py  test_guardrails.py  test_integration.py  test_launcher.py  test_models.py  test_monte_carlo.py  test_outputs.py  test_scenario_storage.py  test_validators.py
ui/: __init__.py  inputs.py  outputs.py  scenarios.py
utils/: __init__.py  charts.py  scenario_storage.py
validation/: __init__.py  validators.py
